Bump upstream SNAPSHOTS
Adopt:
- odlparent-10.0.0
- yangtools-8.0.0-SNAPSHOT
- mdsal-9.0.0-SNAPSHOT

Change-Id: I60991718a6d1ef6f108c2b1f7b2c09b0c5f973c4
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>